--- a/src/components/userInput/userInput.css
+++ b/src/components/userInput/userInput.css
@@ -49,4 +49,13 @@ input:focus {
     border: 0;
     border-radius: 8px;
     background-color: var(--rich-black-fogra-29);
+    cursor: pointer;
+}
+
+.cb-userInput-warning {
+    text-align: center;
+    background-color: #f3e484;
+    padding: 10px;
+    margin: 20px 10px;
+    border-radius: 5px;
 }
